fixed content sidebar on mobile single layouts

--- a/assets/scss/_mi-moduls.scss
+++ b/assets/scss/_mi-moduls.scss
@@ -535,10 +535,21 @@ img {
     outline: 0;
 }
 
-.single {
-    .single-content {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-column-gap: 3rem;
+.single .single-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-column-gap: 3rem;
+}
+
+@media(max-width: 639px) {
+    .single {
+        .single-content {
+            grid-column-gap: 0;
+            grid-template-columns: 1fr;
+        }
+
+        .single-sidebar {
+            grid-row-start: 1;
+        }
     }
 }
